schema/testdata/validation_field_optional_of_same_model_type/schema.keel
model Person {
    fields {
        person Person?
    }

    actions {
        create createPerson()
    }
}