schema/testdata/errors/field_required_of_same_model_type.keel
model Person {
    fields {
        //expect-error:16:22:TypeError:The model 'Person' cannot have a field of its own type unless it is optional.
        person Person
    }

    actions {
        create createPerson()
    }
}
